Update cglib dependency and add opens for running unit tests on Java 17
- Change from using cglib-nodep to use cglib and adding latest asm
version so that it works with Java 17.  This is needed for tests that
use jmock
- Add --add-opens jvm arguments to unit test executions to be able to
run with Java 17.  This is needed for jmock tests that end up mocking
classes that end up needing to do reflection into JDK class and for
tests that use reflection.